--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Voucher Generator</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Voucher Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Generate Voucher dari Nomor Kartu</h2>
-    <form id="voucherForm">
-      <label for="cardNumber">Nomor Kartu:</label>
-      <input type="text" id="cardNumber" placeholder="Masukkan nomor kartu" required>
-      <button type="submit">Ambil Voucher</button>
-    </form>
-
-    <div id="voucherResult" class="hidden">
-      <h3>Voucher Anda:</h3>
-      <pre id="voucherCode">Loading...</pre>
+    <div class="container">
+        <h1>Voucher Generator</h1>
+        <form id="voucher-form">
+            <label for="card-number">Enter Card Number:</label>
+            <input type="text" id="card-number" name="card-number" required>
+            <label for="voucher-count">Enter Voucher Count:</label>
+            <input type="number" id="voucher-count" name="voucher-count" required min="1">
+            <button type="submit">Generate Vouchers</button>
+        </form>
+        <div id="voucher-result" class="hidden">
+            <h2>Generated Vouchers</h2>
+            <ul id="voucher-codes"></ul>
+        </div>
     </div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
